<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp">

               <ImageView
                   android:id="@+id/iwBackButton"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:layout_marginStart="10dp"
                   android:src="@drawable/ic_baseline_arrow_back_24"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:id="@+id/twCharacterName"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:fontFamily="@font/avenir_black"
                   android:textSize="30sp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />
           </androidx.constraintlayout.widget.ConstraintLayout>


           <ImageView
               android:id="@+id/iwCharacterImage"
               android:layout_width="275dp"
               android:layout_height="275dp"
               android:layout_marginHorizontal="50dp"
               android:layout_marginVertical="20dp"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:layout_marginBottom="20dp"
               >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginHorizontal="20dp"
                   android:layout_marginBottom="5dp">
                   <TextView
                       android:id="@+id/textView"
                       android:layout_width="0dp"
                       android:layout_weight="2"
                       android:layout_height="match_parent"
                       android:fontFamily="@font/avenir_black"
                       android:text="@string/characterStatusTitle"
                       android:textColor="#191919"
                       android:textSize="22sp"/>

                   <TextView
                       android:id="@+id/twCharacterStatus"
                       android:layout_width="0dp"
                       android:layout_weight="3"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_roman"
                       android:textColor="#191919"
                       android:textSize="22sp" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginHorizontal="20dp"
                   android:layout_marginBottom="5dp">
                   <TextView
                       android:id="@+id/textView2"
                       android:layout_width="0dp"
                       android:layout_weight="2"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_black"
                       android:text="@string/characterSpecyTitle"
                       android:textColor="#191919"
                       android:textSize="22sp" />

                   <TextView
                       android:id="@+id/twCharacterSpecy"
                       android:layout_width="0dp"
                       android:layout_weight="3"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_roman"
                       android:textColor="#191919"
                       android:textSize="22sp"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginHorizontal="20dp"
                   android:layout_marginBottom="5dp">
                   <TextView
                       android:id="@+id/textView3"
                       android:layout_width="0dp"
                       android:layout_weight="2"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_black"
                       android:text="@string/characterGenderTitle"
                       android:textColor="#191919"
                       android:textSize="22sp" />

                   <TextView
                       android:id="@+id/twCharacterGender"
                       android:layout_width="0dp"
                       android:layout_weight="3"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_roman"
                       android:textColor="#191919"
                       android:textSize="22sp"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginHorizontal="20dp"
                   android:layout_marginBottom="5dp">
                   <TextView
                       android:id="@+id/textView4"
                       android:layout_width="0dp"
                       android:layout_weight="2"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_black"
                       android:text="@string/characterOriginTitle"
                       android:textColor="#191919"
                       android:textSize="22sp" />

                   <TextView
                       android:id="@+id/twCharacterOrigin"
                       android:layout_width="0dp"
                       android:layout_weight="3"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_roman"
                       android:textColor="#191919"
                       android:textSize="22sp" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginHorizontal="20dp"
                   android:layout_marginBottom="5dp">
                   <TextView
                       android:id="@+id/textView5"
                       android:layout_width="0dp"
                       android:layout_weight="2"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_black"
                       android:text="@string/characterLocationTitle"
                       android:textColor="#191919"
                       android:textSize="22sp" />

                   <TextView
                       android:id="@+id/twCharacterLocation"
                       android:layout_width="0dp"
                       android:layout_weight="3"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_roman"
                       android:textColor="#191919"
                       android:textSize="22sp"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginHorizontal="20dp"
                   android:layout_marginBottom="5dp">
                   <TextView
                       android:id="@+id/textView6"
                       android:layout_width="0dp"
                       android:layout_weight="2"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_black"
                       android:text="@string/characterEpisodesTitle"
                       android:textColor="#191919"
                       android:textSize="22sp" />

                   <TextView
                       android:id="@+id/twCharacterEpisodes"
                       android:layout_width="0dp"
                       android:layout_weight="3"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_roman"


                       android:textColor="#191919"
                       android:textSize="22sp"/>
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginHorizontal="20dp"
                   android:layout_marginBottom="5dp">
                   <TextView
                       android:id="@+id/textView7"
                       android:layout_width="0dp"
                       android:layout_weight="2"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_black"
                       android:text="@string/characterCreatedAtTitle"

                       android:ellipsize="end"
                       android:textColor="#191919"
                       android:textSize="22sp" />

                   <TextView
                       android:layout_gravity="center"
                       android:id="@+id/twCharacterCreatedAt"
                       android:layout_width="0dp"
                       android:layout_weight="3"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/avenir_roman"

                       android:textColor="#191919"
                       android:textSize="22sp"/>
               </LinearLayout>

           </LinearLayout>
       </LinearLayout>
   </ScrollView>
</layout>